# apple-mail-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml  test.yml
apple_mail_mcp/: __init__.py  maildb.py  server.py
tests/: test_maildb.py
